--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -6,17 +6,7 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: ru
-    mail_from: 'dkj96@ya.ru'
-    upload_directory: "%kernel.root_dir%/../web/upload"
-    recaptcha_key: '6LeMHSgUAAAAAOAMpZmnlPxcjHHDwJPne0pBbedd'
-    recaptcha_secret_key: '6LeMHSgUAAAAAPN_On3djO3qfLLPgFhmuy_sUmda'
-    recaptcha_verify_url: 'https://www.google.com/recaptcha/api/siteverify'
-    client_review: 'client@dkj96.ru'
-    client_question: 'client@dkj96.ru'
-    client_comm_propsal: 'client@dkj96.ru'
-    director: 'director@dkj96.ru'
-    administrator: 'dkj96@yandex.ru'
+    locale: pl
 
 framework:
     #esi: ~
@@ -47,10 +37,6 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
-    globals:
-        files_dir: 'upload'
-        recaptcha_key: '%recaptcha_key%'
-        recaptcha_secret_key: '%recaptcha_secret_key%'
 
 # Doctrine Configuration
 doctrine:
@@ -89,3 +75,6 @@ fos_user:
     from_email:
         address: 'test_email@gmail.com'
         sender_name: 'Test'
+    registration:
+        form:
+            type: AppBundle\Form\RegistrationType
