--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -3,17 +3,17 @@
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
     database_host: 127.0.0.1
-    database_port: ~
-    database_name: symfony
+    database_port: 3306
+    database_name: 7tech
     database_user: root
-    database_password: ~
+    database_password: null
     # You should uncomment this if you want to use pdo_sqlite
     #database_path: '%kernel.project_dir%/var/data/data.sqlite'
 
     mailer_transport: smtp
-    mailer_host: smtp.yandex.ru
-    mailer_user: pavelesmi@yandex.ru
-    mailer_password: Ctrnjh56ufpf
+    mailer_host: smtp.email.com
+    mailer_user: user@email.com
+    mailer_password: null
 
     # A secret key that's used to generate certain security-related tokens
     secret: ThisTokenIsNotSoSecretChangeIt
