--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,8 +5,7 @@ security:
         FOS\UserBundle\Model\UserInterface: bcrypt
 
     role_hierarchy:
-        ROLE_SUPER_ADMIN: ROLE_ADMIN,
-        ROLE_MANAGER: ROLE_ADMIN
+        ROLE_USER: ROLE_USER
 
     # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
@@ -20,21 +19,34 @@ security:
             security: false
 
         main:
-            pattern: ^/admin(.*)
+            pattern: ^/
             form_login:
                 provider: fos_userbundle
                 login_path: fos_user_security_login
                 check_path: fos_user_security_check
-                default_target_path: /admin/dashboard
+                default_target_path: /
             logout:
                 path: fos_user_security_logout
-                target: /admin/login
+                target: /user/login
+            anonymous: true
+            context: application
+
+        user:
+            pattern: ^/user(.*)
+            form_login:
+                provider: fos_userbundle
+                login_path: fos_user_security_login
+                check_path: fos_user_security_check
+                default_target_path: /
+            logout:
+                path: fos_user_security_logout
+                target: /user/login
             anonymous: true
             context: application
 
     access_control:
-        - { path: ^/admin/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/login_check$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/user(.*), role: [IS_AUTHENTICATED_ANONYMOUSLY, ROLE_USER] }
+        - { path: ^/user/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/user/login_check$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin, role: ROLE_ADMIN }
