--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -12,6 +12,11 @@ services:
     swift_message:
         class: Swift_Message
 
+    app.form.registration:
+        class: AppBundle\Form\RegistrationType
+        tags:
+            - { name: form.type, alias: app_user_registration }
+
     AppBundle\:
         resource: '../../src/AppBundle/*'
         exclude: '../../src/AppBundle/{Entity,Repository}'
@@ -21,11 +26,6 @@ services:
         public: true
         tags: ['controller.service_arguments']
 
-    AppBundle\Listener\:
-        resource: '../../src/AppBundle/Listener'
-        public: true
-        tags:
-            - { name: doctrine.event_subscriber, connection: default }
     AppBundle\Service\:
         resource: '../../src/AppBundle/Service'
         public: true
