--- a/web/package.json
+++ b/web/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "ckeditor": "^4.8.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "sweetalert": "^1.1.3"
   },
   "devDependencies": {},
   "scripts": {
